@@ -1,4 +1,7 @@
 2009-05-24 Iuri Fernandes <iurifq@gmail.com>
+* Fixed some bugs in hospedar, but it is still not working
+
+2009-05-24 Iuri Fernandes <iurifq@gmail.com>
 * Created hospedar action, but it is still not working
 
 2009-05-23 Suzana Matos <suzana.mato@gmail.com>
